<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">日理万机</string>
    <string name="action_settings">选项</string>
    <string name="action_next">新版预告</string>
    <string name="hello_world">嘿嘿</string>
    <string name="last">go to Last</string>
    <string name="first">go to First</string>
    <string name="tab_today">日计划</string>
    <string name="tab_week">周计划</string>
    <string name="tab_month">月计划</string>
    <string name="tab_year">年计划</string>
    <string name="button_prev">&lt;</string>
    <string name="button_next">&gt;</string>
    <string name="button_return">回现在</string>
    <string name="button_add">+</string>
    <string name="button_confirm">确定</string>
    <string name="title_activity_add">调整</string>
    <string name="add_subject">标题：</string>
    <string name="add_type">类别：</string>
    <string name="add_datetime">时间：</string>
    <string name="button_all">查看全部</string>
    <string name="action_about">关于</string>
    <string name="about_title">关于作者</string>
    <string name="about_content">作者是个大好人\n老好了\n英俊潇洒风流倜傥\n目前单身\n求妹纸*1枚</string>
    <string name="next_title">下个版本的剧透</string>
    <string name="next_content">1)添加due date功能\n2)UI不会永远这么土,和预想中的还差得非常远\n3)太多了都说不过来</string>

    <string-array name="type_array">
        <item>日计划</item>
        <item>周计划</item>
        <item>月计划</item>
        <item>年计划</item>
    </string-array>
    
    <string-array name="weekday_array">
        <item>Monday</item>
        <item>Sunday</item>
    </string-array>

    <string-array name="weekday_value_array">
        <item>2</item>
        <item>1</item>
    </string-array>
    
    <string name="title_activity_week_add">WeekAddActivity</string>
    <string name="pref_firstDayOfWeek">更改每周第一天</string>

</resources>
